# todo_cli

./: Cargo.toml  README.md  build.ps1  local_config.json  rust-toolchain.toml
crates/todo_cli/: Cargo.toml
crates/todo_cli/src/: main.rs
crates/todo_cli/src/cli/: mod.rs
crates/todo_cli/tests/: cli_done.rs  cli_edit_delete.rs  cli_list.rs  cli_reschedule.rs  cli_schedule.rs
crates/todo_core/: Cargo.toml
crates/todo_core/src/: error.rs  lib.rs  task_api.rs
crates/todo_core/src/config/: mod.rs
crates/todo_core/src/model/: mod.rs  task.rs
crates/todo_core/src/notify/: linux.rs  mod.rs  windows.rs
crates/todo_core/src/storage/: json_store.rs
tests/: cli_add.rs  cli_done.rs  cli_interactive.rs  cli_list.rs  cli_notify.rs  cli_show.rs  cli_smoke.rs
todoapp/: Cargo.toml
todoapp/benches/: example.rs
