[package]
name = "todo_core"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.36", features = ["formatting", "local-offset", "parsing", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.11.7"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7.2"

